assets/attachments/k8s/petclinic/app/app.ingress.yml
# Ingress exposant PetClinic sur petclinic.local (fourni - meme principe qu'au lab 01)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
  namespace: pet-clinic-app
spec:
  rules:
  - host: petclinic.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: java-app
            port:
              number: 80
